# op2c

./: .gitignore  CMakeLists.txt  Doxyfile  pyproject.toml
.agent/rules/: op2crule.md
doc/: cpp_api.md  development_workflow.md  devplan.md  grid_integration_plan.md
doc/theory/: position_operator.md  talman_method.md
op2c/: __init__.py  op2c.py
op2c/nao/: __init__.py  atomic_radials.py  numerical_radial.py
op2c/pseudo/: __init__.py  atom_pseudo.py  beta_radials.py
src/: CMakeLists.txt
src/bindings/: CMakeLists.txt  py_nao.cpp
src/int2c/: bundle.cpp  bundle.h  gaunt_table.cpp  gaunt_table.h  integrator.cpp  integrator.h  op2c.cpp  op2c.hpp  table.cpp  table.h
src/io/: rescumat_mat.cpp  rescumat_mat.h
src/math/: math_integral.cpp  math_sphbes.cpp  projgen.cpp  spherical_bessel_transformer.cpp  ylm.cpp  ylm.h
src/math/interpolation/: cubic_spline.cpp
src/math/linalg/: complexarray.cpp  complexarray.h  complexmatrix.cpp  complexmatrix.h  matrix.cpp  matrix.h  nao_lapack_types.h  realarray.cpp  realarray.h  vector3.h
src/nao/: atomic_basis.cpp  atomic_basis.h  atomic_radials.cpp  atomic_radials.h  orbital_evaluator.cpp  orbital_evaluator.h  orbital_shell.cpp  orbital_shell.h  radial_function.cpp  radial_function.h
src/pseudopotential/: beta_projectors.cpp  beta_projectors.h  pseudo.cpp  pseudo.h  pseudo_atom.cpp  pseudo_atom.h  soc.cpp  soc.h
src/pseudopotential/io/: read_pp.cpp  read_pp.h  read_pp_blps.cpp  read_pp_complete.cpp  read_pp_psml.cpp  read_pp_upf100.cpp  read_pp_upf201.cpp  read_pp_vwr.cpp  read_pseudo.cpp  read_pseudo.h
src/utils/: global.h  log.h  memory.cpp  memory.h  parallel_common.cpp  parallel_common.h
src/utils/container/: CMakeLists.txt
src/utils/container/ATen/core/: tensor_types.h
test/: CMakeLists.txt  test.cpp  test_api_usage.cpp  test_concurrency.cpp  test_diff.cpp  test_gaunt.cpp  test_iterative.cpp  test_op2c.cpp  test_pos.cpp  test_pseudo.cpp  test_two_center_bundle.cpp
tests/: test_concurrency.py  test_diff.py  test_iterative.py  test_nao.py  test_rescumat_mat.py  test_unit.py
